# tapir

./: Cargo.toml  README.md
src/: app.rs  helpers.rs  http_request.rs  main.rs  ui.rs
