[package]
name = "tapir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
futures = "0.3.29"
ratatui = "0.24.0"
reqwest = { version = "0.11.22", features = ["json"]}
serde = "1.0.190"
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["full"]}
